# graphvae

./: pyproject.toml
graphvae/: data.py  main.py  model.py
tests/: test_graphvae.py
