[tool.poetry]
name = "graphvae"
version = "0.1.0"
description = ""
authors = ["dpstart <danielepaliotta96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.5"
torch = "^1.7.1"
matplotlib = "^3.3.4"
black = "^20.8b1"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
